Add mkcert for https on localhost

--- a/docs/0.README.md
+++ b/docs/0.README.md
@@ -13,11 +13,19 @@ yarn install
 
 ## Development Server
 
-Start the development server on `http://localhost:3000`:
+Start the development server on `https://localhost:3000`:
 
 ```bash
 # yarn
 yarn dev
+```
+
+### Configure a local ssl certificate
+
+Install `mkcert` using the [github guide](https://github.com/FiloSottile/mkcert)
+
+```bash
+mkcert localhost
 ```
 
 ## Production
