--- a/docs/0.README.md
+++ b/docs/0.README.md
@@ -28,6 +28,8 @@ Install `mkcert` using the [github guide](https://github.com/FiloSottile/mkcert)
 mkcert localhost
 ```
 
+Save the generated files at the root of the project `localhost.pem` and `localhost-key.pem`
+
 ## Production
 
 Build the application for production:
